cabal-version:      2.4
name:               rememorate
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
build-type:         Simple
extra-source-files: README.md

executable rememorate
  hs-source-dirs:     src
  main-is:            Main.hs
  exposed-modules:
    Rememorate.Run
  build-depends:
      base
    , reflex
    , reflex-dom
    , text
    , aeson
    , bytestring
    , relude >= 0.7.0.0
    , jsaddle
  if !impl(ghcjs)
    build-depends:
      warp,
      websockets,
      jsaddle-warp,
      wai,
      http-types

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Extra)

  default-extensions:
    DataKinds
    FlexibleContexts
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    DeriveGeneric

  ghc-options:        -Wall -threaded

  if impl(ghcjs -any)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER

  default-language:   Haskell2010

  if os(osx)
    ghc-options: -dynamic
